Improve user guide